--- a/My Demo App/Storyboards/Base.lproj/Authentication.storyboard
+++ b/My Demo App/Storyboards/Base.lproj/Authentication.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BXJ-gN-Bmn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BXJ-gN-Bmn">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -424,6 +425,7 @@
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qqy-9j-AZV">
                                                                 <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
+                                                                <accessibility key="accessibilityConfiguration" identifier="Catalog-tab-item"/>
                                                                 <connections>
                                                                     <action selector="catalogButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sze-CN-JrW"/>
                                                                 </connections>
@@ -485,6 +487,7 @@
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Bm-7Q-4G8">
                                                                 <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
+                                                                <accessibility key="accessibilityConfiguration" identifier="Cart-tab-item"/>
                                                                 <connections>
                                                                     <action selector="cartButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n3b-iE-Zjh"/>
                                                                 </connections>
@@ -521,6 +524,7 @@
                                                             </label>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tX7-OO-t1u">
                                                                 <rect key="frame" x="0.0" y="0.0" width="138" height="60"/>
+                                                                <accessibility key="accessibilityConfiguration" identifier="More-tab-item"/>
                                                                 <connections>
                                                                     <action selector="moreButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oRf-ao-Nok"/>
                                                                 </connections>
